# tide

./: .gitignore  CHANGELOG.md  LICENSE  default.nix  tide.cabal
nix/: cleanHaskell.nix  default.nix  fetchNixpkgs.nix  nixpkgs.nix
src/Sound/: Wave.hs
src/Sound/Wave/: Channels.hs  Encoding.hs  Raw.hs  Sample.hs
test/: Main.hs
